WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87294
REGRESSION (
r117623
): Entering/exiting fullscreen HTML5 videos, there is a quick animated fade
https://bugs.webkit.org/show_bug.cgi?id=87294
Summary
REGRESSION (r117623): Entering/exiting fullscreen HTML5 videos, there is a qu...
Jer Noble
Reported
2012-05-23 11:53:55 PDT
REGRESSION (117623) - Entering/exiting fullscreen HTML5 videos, there is a quick animated fade
Attachments
Patch
(1.93 KB, patch)
2012-05-23 11:57 PDT
,
Jer Noble
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2012-05-23 11:57:18 PDT
<
rdar://problem/11506223
>
Jer Noble
Comment 2
2012-05-23 11:57:49 PDT
Created
attachment 143608
[details]
Patch
Darin Adler
Comment 3
2012-05-23 13:04:00 PDT
Comment on
attachment 143608
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=143608&action=review
> Source/WebKit2/UIProcess/API/mac/WKView.mm:2518 > + [CATransaction begin]; > + [CATransaction setDisableActions:YES];
A “why” comment would be good here for the setDisableActions: call.
Jer Noble
Comment 4
2012-05-23 14:14:39 PDT
Committed
r118245
: <
http://trac.webkit.org/changeset/118245
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug