REGRESSION (117623) - Entering/exiting fullscreen HTML5 videos, there is a quick animated fade https://bugs.webkit.org/show_bug.cgi?id=87294

Reviewed by Darin Adler.

When setting the sublayers array on the layer hosting view, wrap the call in a CATransaction which disables
animations.

* UIProcess/API/mac/WKView.mm:
(-[WKView _updateAcceleratedCompositingMode:WebKit::]):

Canonical link: https://commits.webkit.org/105038@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118245 268f45cc-cd09-0410-ab3c-d52691b4dbfc